[MODINVOICE-608]. Negative encumbrances on orders with paid invoices - LOC